platform/k8s/base/network-policies/07-allow-backends-egress.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-backends-egress
#   namespace: atlas
# spec:
#   podSelector:
#     matchExpressions:
#       - key: app
#         operator: In
#         values: [auth, catalog, order, prometheus]
#   policyTypes:
#     - Egress
#   egress:
#     # DNS (ya lo tienes global, pero no sobra)
#     - to:
#         - namespaceSelector:
#             matchLabels:
#               kubernetes.io/metadata.name: kube-system
#       ports:
#         - protocol: UDP
#           port: 53
#         - protocol: TCP
#           port: 53

#     # Otros pods en el mismo namespace (por label)
#     - to:
#         - podSelector: {}
#     - to:
#         - podSelector:
#             matchExpressions:
#               - key: app
#                 operator: In
#                 values: [auth, catalog, order, redis, rabbitmq, kafka, postgres-auth, postgres-catalog, postgres-order]
#       ports:
#         - protocol: TCP
#           port: 5432   # postgres
#         - protocol: TCP
#           port: 6379   # redis
#         - protocol: TCP
#           port: 5672   # rabbitmq
#         - protocol: TCP
#           port: 15672  # rabbitmq management (opcional)
#         - protocol: TCP
#           port: 9092   # kafka
#         - protocol: TCP
#           port: 8081
#         - protocol: TCP
#           port: 8082
#         - protocol: TCP
#           port: 8083

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backends-egress
  namespace: atlas
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: [auth, catalog, order, prometheus]   # ← Añade esto
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    - to:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 15672
        - protocol: TCP
          port: 9092
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 8082
        - protocol: TCP
          port: 8083
