platform/k8s/base/network-policies/08-allow-prometheus-to-backends.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-prometheus-to-backends
#   namespace: atlas
# spec:
#   podSelector:
#     matchExpressions:
#       - key: app
#         operator: In
#         values: [auth, catalog, order]
#   policyTypes:
#     - Ingress
#   ingress:
#     - from:
#         - podSelector:
#             matchLabels:
#               app: prometheus
#       ports:
#         - protocol: TCP
#           port: 8081
#         - protocol: TCP
#           port: 8082
#         - protocol: TCP
#           port: 8083

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-backends
  namespace: atlas
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: [auth, catalog, order]
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: prometheus
      ports:
        - protocol: TCP
          port: 8080     # ← Agregado (management/actuator)
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 8082
        - protocol: TCP
          port: 8083
