platform/k8s/base/network-policies/09-allow-prometheus-egress.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-prometheus-egress
#   namespace: atlas  
# spec:
#   podSelector:
#     matchLabels:
#       app: prometheus
#   policyTypes:
#     - Egress
#   egress:
#     - to:
#         - namespaceSelector:
#             matchLabels:
#               kubernetes.io/metadata.name: atlas
#       ports:
#         - protocol: TCP
#           port: 8080
#         - protocol: TCP
#           port: 8081
#         - protocol: TCP
#           port: 8082
#         - protocol: TCP
#           port: 8083

# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-prometheus-egress
#   namespace: atlas
# spec:
#   podSelector:
#     matchLabels:
#       app: prometheus
#   policyTypes:
#     - Egress
#   egress:
#     - to:
#         - podSelector: {}        # Puede scrapear cualquier cosa en atlas
#       ports:
#         - protocol: TCP
#           port: 8080
#         - protocol: TCP
#           port: 8081
#         - protocol: TCP
#           port: 8082
#         - protocol: TCP
#           port: 8083
#     # DNS
#     - to:
#         - namespaceSelector:
#             matchLabels:
#               kubernetes.io/metadata.name: kube-system
#       ports:
#         - protocol: UDP
#           port: 53
#         - protocol: TCP
#           port: 53

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: atlas
spec:
  podSelector: {}          # Afecta absolutamente a todos los pods
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector: {}     # Permite hablar con CoreDNS aunque esté en otro label
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
