platform/k8s/base/network-policies/all-netpol.yaml
# 1. Default Deny
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: atlas
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

---
# 2. DNS Global
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: atlas
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

---
# 3. Egress para Backends + Prometheus
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backends-egress
  namespace: atlas
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: [auth, catalog, order, prometheus]
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    - to:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 80          # Services principales
        - protocol: TCP
          port: 8080        # Management / Actuator
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 8082
        - protocol: TCP
          port: 8083
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 15672
        - protocol: TCP
          port: 9092

---
# 4. Ingress a los microservicios
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-backends
  namespace: atlas
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: [auth, catalog, order]
  policyTypes:
    - Ingress
  ingress:
    # Desde Ingress-Nginx
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 8082
        - protocol: TCP
          port: 8083

    # Entre microservicios
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values: [auth, catalog, order]
      ports:
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 8082
        - protocol: TCP
          port: 8083

    # Desde Prometheus
    - from:
        - podSelector:
            matchLabels:
              app: prometheus
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 8082
        - protocol: TCP
          port: 8083
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-infra-ingress
  namespace: atlas
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - postgres-auth
          - postgres-catalog
          - postgres-order
          - redis
          - rabbitmq
          - kafka
          - prometheus
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - auth
                  - catalog
                  - order
                  - prometheus
                  - grafana
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 15672
        - protocol: TCP
          port: 9092
        - protocol: TCP
          port: 9090
